Fix main height and scrollbar in Layout and replaced background for Issue #13

--- a/src/views/Layout.css
+++ b/src/views/Layout.css
@@ -7,49 +7,13 @@
  *
  * @see: https://developer.mozilla.org/en-US/docs/Web/CSS/env
  */
-.Layout {
-	display: flex;
-	flex-direction: column;
-	height: 100dvh;
-}
 
+/* ensure the padding around elements remains reasonable on both small and large screens */
 .Layout > * {
 	padding-inline: min(5dvw, 3.2rem);
 }
 
-.Layout-header {
-	background-color: var(--color-bg);
-	padding-bottom: 0.5rem;
-	padding-top: max(env(safe-area-inset-top), 1rem);
-	text-align: center;
-}
-
-.Layout-header > h1 {
-	margin: 0;
-}
-
-.Layout-main {
-	margin: 0 auto;
-	padding-block: 0;
-	padding-block-end: 6.26rem;
-	width: min(72ch, 100%);
-}
-
-.Nav {
-	background-color: var(--color-bg);
-	bottom: 0;
-	display: flex;
-	flex-direction: row;
-	padding-bottom: max(env(safe-area-inset-bottom), 1rem);
-	padding-top: 1rem;
-	place-content: center;
-	position: absolute;
-	width: 100%;
-}
-
 .Nav-link {
-	--color-text: var(--color-accent);
-	color: var(--color-text);
 	font-size: 1.4em;
 	flex: 0 1 auto;
 	line-height: 1;
